[package]
name = "fixed-queue"
version = "0.3.5"
authors = ["rise0chen <rise0chen@163.com>"]
description = "no_std, no_alloc, use [T; N]. support `Vec`/`VecDeque`/`spsc`/`History`"
documentation = "https://docs.rs/fixed-queue"
homepage = "https://blog.crise.cn"
repository = "https://github.com/rise0chen/fixed-queue.git"
readme = "./README.md"
keywords = ["no_std", "vec", "queue", "spsc", "deque"]
categories = ["data-structures", "embedded"]
license-file = "LICENSE"
edition = "2018"

[dependencies]
